syntax = "proto3";
package ibc.proxy.v1;

option go_package = "github.com/datachainlab/ibc-proxy/modules/proxy/types";

import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/core/connection/v1/connection.proto";
import "ibc/core/channel/v1/channel.proto";
import "ibc/core/commitment/v1/commitment.proto";
import "google/protobuf/any.proto";

service Msg {
  rpc ProxyClientState(MsgProxyClientState) returns (MsgProxyClientStateResponse);

  rpc ProxyConnectionOpenTry(MsgProxyConnectionOpenTry) returns (MsgProxyConnectionOpenTryResponse);
  rpc ProxyConnectionOpenAck(MsgProxyConnectionOpenAck) returns (MsgProxyConnectionOpenAckResponse);
  rpc ProxyConnectionOpenConfirm(MsgProxyConnectionOpenConfirm) returns (MsgProxyConnectionOpenConfirmResponse);
  rpc ProxyConnectionOpenFinalize(MsgProxyConnectionOpenFinalize) returns (MsgProxyConnectionOpenFinalizeResponse);

  rpc ProxyChannelOpenTry(MsgProxyChannelOpenTry) returns (MsgProxyChannelOpenTryResponse);
  rpc ProxyChannelOpenAck(MsgProxyChannelOpenAck) returns (MsgProxyChannelOpenAckResponse);
  rpc ProxyChannelOpenConfirm(MsgProxyChannelOpenConfirm) returns (MsgProxyChannelOpenConfirmResponse);
  rpc ProxyChannelOpenFinalize(MsgProxyChannelOpenFinalize) returns (MsgProxyChannelOpenFinalizeResponse);

  rpc ProxyRecvPacket(MsgProxyRecvPacket) returns (MsgProxyRecvPacketResponse);
  rpc ProxyAcknowledgePacket(MsgProxyAcknowledgePacket) returns (MsgProxyAcknowledgePacketResponse);
  rpc ProxyTimeoutPacket(MsgProxyTimeoutPacket) returns (MsgProxyTimeoutPacketResponse);
}

message MsgProxyClientState {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  string counterparty_client_id = 3;
  google.protobuf.Any client_state = 4;
  google.protobuf.Any consensus_state = 5;
  bytes proof_client = 6;
  bytes proof_consensus = 7;
  ibc.core.client.v1.Height proof_height = 8 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height consensus_height = 9 [(gogoproto.nullable) = false];
  string signer = 10;
}

message MsgProxyClientStateResponse {}

message MsgProxyConnectionOpenTry {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string connection_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.connection.v1.ConnectionEnd connection = 3 [(gogoproto.nullable) = false];
  google.protobuf.Any downstream_client_state = 4;
  google.protobuf.Any downstream_consensus_state = 5;
  google.protobuf.Any proxy_client_state = 6;
  bytes proof_init = 7;
  bytes proof_client = 8;
  bytes proof_consensus = 9;
  ibc.core.client.v1.Height proof_height = 10 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height consensus_height = 11 [(gogoproto.nullable) = false];
  bytes proof_proxy_client = 12;
  bytes proof_proxy_consensus = 13;
  ibc.core.client.v1.Height proof_proxy_height = 14 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height proxy_consensus_height = 15 [(gogoproto.nullable) = false];
  string signer = 16;
}

message MsgProxyConnectionOpenTryResponse {}

message MsgProxyConnectionOpenAck {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string connection_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.connection.v1.ConnectionEnd connection = 3 [(gogoproto.nullable) = false];
  google.protobuf.Any downstream_client_state = 4;
  google.protobuf.Any downstream_consensus_state = 5;
  google.protobuf.Any proxy_client_state = 6;
  bytes proof_try = 7;
  bytes proof_client = 8;
  bytes proof_consensus = 9;
  ibc.core.client.v1.Height proof_height = 10 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height consensus_height = 11 [(gogoproto.nullable) = false];
  bytes proof_proxy_client = 12;
  bytes proof_proxy_consensus = 13;
  ibc.core.client.v1.Height proof_proxy_height = 14 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height proxy_consensus_height = 15 [(gogoproto.nullable) = false];
  string signer = 16;
}

message MsgProxyConnectionOpenAckResponse {}

message MsgProxyConnectionOpenConfirm {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string connection_id = 1;
  string upstream_client_id = 2;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 3 [(gogoproto.nullable) = false];
  string counterparty_connection_id = 4;
  bytes proof_ack = 5;
  ibc.core.client.v1.Height proof_height = 6 [(gogoproto.nullable) = false];
  string signer = 7;
}

message MsgProxyConnectionOpenConfirmResponse {}

message MsgProxyConnectionOpenFinalize {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string connection_id = 1;
  string upstream_client_id = 2;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 3 [(gogoproto.nullable) = false];
  bytes proof_confirm = 4;
  ibc.core.client.v1.Height proof_height = 5 [(gogoproto.nullable) = false];
  string signer = 6;
}

message MsgProxyConnectionOpenFinalizeResponse {}

message MsgProxyChannelOpenTry {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.channel.v1.Order order = 3;
  repeated string connection_hops = 4;
  string port_id = 5;
  string channel_id = 6;
  string downstream_port_id = 7;
  string version = 8;
  bytes proof_init = 9;
  ibc.core.client.v1.Height proof_height = 10 [(gogoproto.nullable) = false];
  string signer = 11;
}

message MsgProxyChannelOpenTryResponse {}

message MsgProxyChannelOpenAck {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.channel.v1.Order order = 3;
  repeated string connection_hops = 4;
  string port_id = 5;
  string channel_id = 6;
  string downstream_port_id = 7;
  string downstream_channel_id = 8;
  string version = 9;
  bytes proof_try = 10;
  ibc.core.client.v1.Height proof_height = 11 [(gogoproto.nullable) = false];
  string signer = 12;
}

message MsgProxyChannelOpenAckResponse {}

message MsgProxyChannelOpenConfirm {
  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  string port_id = 3;
  string channel_id = 4;
  string downstream_channel_id = 5;
  bytes proof_ack = 6;
  ibc.core.client.v1.Height proof_height = 7 [(gogoproto.nullable) = false];
  string signer = 8;
}

message MsgProxyChannelOpenConfirmResponse {}

message MsgProxyChannelOpenFinalize {
  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  string port_id = 3;
  string channel_id = 4;
  bytes proof_confirm = 5;
  ibc.core.client.v1.Height proof_height = 6 [(gogoproto.nullable) = false];
  string signer = 7;
}

message MsgProxyChannelOpenFinalizeResponse {}

message MsgProxyRecvPacket {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.channel.v1.Packet packet = 3 [(gogoproto.nullable) = false];
  bytes proof = 4;
  ibc.core.client.v1.Height proof_height = 5 [(gogoproto.nullable) = false];
  string signer = 6;
}

message MsgProxyRecvPacketResponse {}

message MsgProxyAcknowledgePacket {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.channel.v1.Packet packet = 3 [(gogoproto.nullable) = false];
  bytes acknowledgement = 4;
  bytes proof = 5;
  ibc.core.client.v1.Height proof_height = 6 [(gogoproto.nullable) = false];
  string signer = 7;
}

message MsgProxyAcknowledgePacketResponse {}

message MsgProxyTimeoutPacket {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string upstream_client_id = 1;
  ibc.core.commitment.v1.MerklePrefix upstream_prefix = 2 [(gogoproto.nullable) = false];
  ibc.core.channel.v1.Packet         packet           = 3 [(gogoproto.nullable) = false];
  bytes                     proof_unreceived = 4;
  ibc.core.client.v1.Height proof_height     = 5 [(gogoproto.nullable) = false];
  uint64 next_sequence_recv = 6;
  string signer             = 7;
}

message MsgProxyTimeoutPacketResponse {}
